# cal-helper

./: .gitignore  README.md  cal.py  env.py  events_service.py  flake.nix  main.py  news_service.py  parse_event.py  publish_event.py  pyproject.toml  requirements.txt  result  scraper.py  tag.html  temp.html  util.py
src/cal_helper/: __init__.py  env.py  events_service.py  markdown.py  news_service.py  parse_event.py  publish_event.py  timesend.py  util.py
